[package]
name = "your_project_name"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
rusoto_dynamodb = "0.47"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
cpal = "0.13"
maplit = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

